<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    <LinearLayout
            android:id="@+id/sortBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sortFileName"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/filename"
                android:padding="0dp"
                android:textSize="12sp"
                android:onClick="onSort"/>

            <Button
                android:id="@+id/sortUpdate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/lastupdate"
                android:textSize="12sp"
                android:onClick="onSort"/>

            <Button
                android:id="@+id/sortSize"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/size"
                android:textSize="12sp"
                android:onClick="onSort"/>
        </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>